laborations/lab1/testsuite/bad/bad113.cc
int main() {
	(const int x) = 1;
}
